2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/cursors/*: Moved to src/pixmaps/
	* src/Makefile.am. src/cursors.[ch], src/pixmaps/Makefile.am:
	Follow the change.
	* src/cursors: Removed.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_saver/Makefile.am, plugins/io_stream/Makefile.am,
	  plugins/thumbnail/Makefile.am, plugins/image_loader/Makefile.am,
	  plugins/image_view/Makefile.am, plugins/thumbnail_view/Makefile.am,
	  src/Makefile.am, src/prefs_ui/Makefile.am, Makefile.am:
	Remove .deps/* from CLEANFILES.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_slideshow.[ch]: GObjectize.
	* src/gimageview.c: Move GimvSlideshow declaration to gimv_slideshow.h

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimageview.c, src/gimv_slideshow.[ch]:
	Declare givm_slideshow_open_window() and gimv_slideshow_delete() as
	private.

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_comment.[ch], src/gimv_comment_view.c:
	Remove gimv_comment_ref() and gimv_comment_unref().

2007-10-21 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_loader/pixbuf_anim.c, plugins/image_loader/mng.c,
	  plugins/image_loader/pixbuf_loader.c,
	  plugins/image_view/image_view_xine.c,
	  plugins/image_view/image_view_mplayer.c,
	  src/gimv_thumb.c, src/gimv_image_view.c, src/gimv_image_loader.c,
	  src/gimv_image.c, src/gimv_image.h, src/gimv_image_saver.c,
	  src/compare_similar.c, src/gimv_image_view_draw.c:
	Remove gimv_image_ref() and gimv_image_unref().

2007-10-20 Takuro Ashie <ashie@homa.ne.jp>

	* etc/Makefile.am: Change install path of desktop file.
	* src/gimageview.desktop: Add Categories and MIMEType field.
	* plugins/thumbnail/gimv_thumb.c, plugins/thumbnail/xvpics.c,
	  src/gimv_image.c, src/gimv_image_saver.c, src/gimv_image_saver.h:
	Remove gimv_image_saver_ref() and gimv_image_saver_unref().

2007-10-19 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_slideshow.[ch], src/gimv_image_win.[ch], src/gimageview.[ch],
	  src/gimv_thumb_win.c: