@@ -1,5 +1,13 @@
 2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/cursors.[ch]: Removed.
+	* src/gimv_icon_stock.[ch]: Moved codes in src/cursors.[ch] to here.
+	* src/Makefile.am, src/gimv_image_view.c, src/gimv_image_view_draw.c,
+	  src/gimv_image_win.c: Follow the change.
+	* configure.ac: Remove src/cursors/Makefile.in.
+
+2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/cursors/*: Moved to src/pixmaps/
 	* src/Makefile.am. src/cursors.[ch], src/pixmaps/Makefile.am:
 	Follow the change.
